package com.xeland314.conversores.divisas;

public class Divisa {
    
}
